# RSschool_capstone_project

./: .flake8  .gitattributes  .gitignore  Makefile  Makefile.in.mk  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: python-app.yml
EDA/: EDA Forest.ipynb
scripts/: consts.py  data_profiling.py
src/forest_model/: consts.py  data_processing.py  get_data.py  get_metrics.py  get_model_and_params.py  model_settings.py  submission.py  train.py  utils.py
src/models/: finalized_model.sav
tests/: test_train.py
tests/fixtures/: test.csv
