[tool.poetry]
name = "rsschool_capstone"
version = "1.0"
description = "Final RS project"
authors = ["Your Name <you@example.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "3.9.6"
pandas = "^1.4.2"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
