[tool.poetry]
name = "forest_model"
version = "1.0"
description = "Final RS Project"
authors = ["swankyalex <antilevski@tut.by>"]
license = "Apache License 2.0"

[tool.poetry.scripts]
train = "forest_model.train:train"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
pandas-profiling = {extras = ["notebook"], version = "^3.1.0"}
pandas = "1.3.5"
click = "^8.1.3"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
